--- a/SpringBoot/calculator-logic/pom.xml
+++ b/SpringBoot/calculator-logic/pom.xml
@@ -3,6 +3,7 @@
     <groupId>com.example</groupId>
     <artifactId>calculator-logic</artifactId>
     <version>0.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
     <properties>
         <maven.compiler.source>23</maven.compiler.source>
         <maven.compiler.target>23</maven.compiler.target>
